Add Layout and Index Page, Lite CSS

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,4 @@
-<h3> HEllo yall</h3>
+<h2> Hello y'all!!!</h2>
+
+<p>This is the Stack Overflow look-alike created by Nicole Yee, Kim Allen, Kyle Smith and Deanna Warren. It is awesome because we are awesome. </p>
+<p>The Link to all of the posts will be found here</a></p>
