--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,18 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <H1>Vanilla DBC Overflow</H1>
+  <nav>
+    <ul>
+      <li>Links go here</li>
+      <li>Links go here</li>
+      <li>Links go here</li>
+      <li>Links go here</li>
+      <li>Links go here</li>
+    </ul>
+  </nav>
+  <main>
+    <%= yield %>
+  </main>
 </body>
 </html>
