Create the show page for questions

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,1 +1,8 @@
-<%  %>
+<article id="question">
+  <h1><%= @question.title %></h1>
+
+  <span class="datetime"><%= "Asked on #{@question.created_at}" %></span>
+  <span class="author-name"><%= "Written by: #{@question.user.name}" %></span>
+  <p><%= @question.body %></p>
+
+</article>
