Fix stupid shit

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -6,7 +6,7 @@
     <br>
     <hr>
     <p><%= question.body %></p>
-    <span id='votes'><%= question.vote_count %></span>
+    <span id='votes'><%= question.vote_sum %></span>
   </li>
 <% end %>
 </ol>
