Add submit button

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -3,4 +3,5 @@
 <form id="submit_question">
   <input type="text" name="title" placeholder="Title">
   <textarea name="body" rows="4" cols="50"></textarea>
+  <input type="submit" value="Submit to me!">
 </form>
