--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,12 @@
   <title></title>
 </head>
 <body>
+  <% if current_user %>
+    <a href='/users/<%= current_user.id %>'><button>Logout</button></a>
+  <%else %>
+    <a href='/sessions/new'><button>Login</button></a>
+    <a href='/users/new'><button>Register</button></a>
+  <% end %>
   <%= yield %>
 </body>
 </html>
