--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,7 +1,7 @@
 <%= flash[:error] %>
 <h1>Register Yo'Self</h1>
 <form id="registration">
-  <input type="text" name="user[username]">
+  <input type="text" name="user[name]">
   <input type="text" name="user[email]">
   <input type="text" name="user[password]">
   <input type="submit" value="submit">
