--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <h1>User Profile</h1>
-<p><%= @user.username %></p>
+<p><%= @user.name %></p>
 <p><%= @user.email %></p>
 <a href='/users/<%=current_user.id %>/edit'><button>Edit Profile</button></a>
 <form action='/users/<%=current_user.id %>' method= 'post'>
