--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,7 @@
-<h3> Hello yall</h3>
+
+<% if current_user %>
+  <h3> Hello <%= current_user.name %></h3>
+<% else %>
+
+  <h3> Hello, y'all </h3>
+<% end %>
