--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -10,3 +10,15 @@
   <p><%= @question.body %></p>
 
 </article>
+
+<form id="new-answer-form" method= >
+ <label>Answer:</label>
+ <br>
+ <textarea class="new-answer" name="body" rows="4" cols="50"></textarea>
+ <br>
+ <button id="answer-submit"><input type="submit" value="submit answer"></button>
+</form>
+
+<article id="answers">
+
+</article>
