Append a question's answers to the question's page

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,6 +1,6 @@
 <h1>Question Everything</h1>
 
-<form id="submit_question">
+<form id="submit_question" action='/questions' method='post'>
   <label><strong>Title: </strong></label>
   <br>
   <input type="text" name="title">
