--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -6,3 +6,6 @@
   <input type="hidden" name="_method" value='delete'>
   <input type='submit' value='Delete Profile'>
 </form>
+
+<button><a href="/questions">Browse Questions</a></button>
+<button><a href="/questions/new">Post New Question</a></button>
