--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -12,7 +12,7 @@
 </article>
 
 <p>
-  <%= erb :'partials/_comment_form', layout: false, locals: { action: "questions/#{@question.id}/comments", value: "Comment on Question", placeholder: "Comment on the question" } %>
+  <%= erb :'partials/_comment_form', layout: false, locals: { action: "questions/#{@question.id}/comments", value: "comment", placeholder: "comment" } %>
 </p>
 
 <br>
@@ -29,6 +29,10 @@
       <span class="author-name"><%= "Answered by: #{answer.user.name}" %></span>
     </div>
     <p><%= answer.body %></p>
+    <br>
+    <p>
+      <%= erb :'partials/_comment_form', layout: false, locals: { action: "questions/#{@question.id}/comments", value: "comment", placeholder: "comment" } %>
+    </p>
     <br>
     <% end %>
   <% end %>
