--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 
 <% if current_user %>
   <h3> Hello <%= current_user.name %></h3>
-  <a href="/questions/index">Browse Questions</a>
+  <a href="/questions">Browse Questions</a>
   <a href="/questions/new">Post New Question</a>
 <% else %>
   <h3> Hello, y'all </h3>
