--- a/app/views/partials/_a_comment_form.erb
+++ b/app/views/partials/_a_comment_form.erb
@@ -1,4 +1,4 @@
-<form class="comment_form" action="<%= action %>" method="POST">
+<form class="a_comment_form" action="<%= action %>" method="POST">
   <input type="text" name="comment" placeholder="<%= placeholder %>">
   <input type="submit" value="<%= value %>">
 </form>
