--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,11 +1,13 @@
 <h1>Questions Index</h1>
 <ol>
   <% @questions.each do |question|  %>
+
     <li>
       <h3><a href="/questions/<%= question.id %>"><%= question.title %></a></h3>
       <br>
       <hr>
       <p><%= question.body %></p>
+      <p><%= question.user.name %></p>
       <span id='votes'><%= question.vote_sum %></span>
     </li>
   <% end %>
