--- a/app/views/partials/_q_comment_form.erb
+++ b/app/views/partials/_q_comment_form.erb
@@ -1,4 +1,5 @@
 <form class="q_comment_form" action="<%= action %>" method="POST">
+  <input type="hidden" name="question_id" value="<%= question_id %>">
   <input type="text" name="comment" placeholder="<%= placeholder %>">
   <input type="submit" value="<%= value %>">
 </form>
