Add the user who posted the comment

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -49,6 +49,7 @@
           <div class="comments">
             <p>Comments:</p>
             <p><%= comment.body %></p>
+            <p><%= "By #{comment.user.name}" %></p>
           </div>
         <% end  %>
       <% end %>
