--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -40,6 +40,9 @@
       <span class="author-name"><%= "Answered by: #{answer.user.name}" %></span>
     </div>
     <p><%= answer.body %></p>
+    <% if current_user == answer.user %>
+      <a href='/questions/<%= answer.question_id %>/answers/<%= answer.id %>/edit'>Edit</a>
+    <% end %>
     <br>
       <% a_comments = Comment.where(answer_id: answer.id) %>
       <% if a_comments.empty? %>
