Add CSS for question view

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,11 +32,7 @@
   <H1>Vanilla DBC Overflow</H1>
   <nav>
     <ul>
-      <li>Links go here</li>
-      <li>Links go here</li>
-      <li>Links go here</li>
-      <li>Links go here</li>
-      <li>Links go here</li>
+      <li><a href="/questions">Browse Questions</a></li>
     </ul>
   </nav>
   <main>
