Answer comments still don't work. mother fucker

--- a/app/views/partials/_a_comment_form.erb
+++ b/app/views/partials/_a_comment_form.erb
@@ -1,6 +1,6 @@
 <form class="a_comment_form" action="<%= action %>" method="POST">
-  <input type="hidden" name="answer_id" value="<%= answer_id %>">
-  <input type="text" name="comment" placeholder="<%= placeholder %>">
+  <input id="answer_id" type="hidden" name="answer_id" value="<%= answer_id %>">
+  <input class="a_comment"type="text" name="comment" placeholder="<%= placeholder %>">
   <input id="a_comment_button" type="submit" value="<%= value %>">
 </form>
 
