--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,7 +29,7 @@
     <a href='/users/new'><button>Register</button></a>
   <% end %>
 
-  <H1>Vanilla DBC Overflow</H1>
+  <H1><a href="/">Vanilla DBC Overflow</a></H1>
   <nav>
     <ul>
       <li><a href="/questions">Browse Questions</a></li>
