--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -41,7 +41,11 @@
         <span class="datetime"><%= "Answered at #{answer.created_at}" %></span>
         <span class="author-name"><%= "Answered by: #{answer.user.name}" %></span>
       </div>
-      <button class="best_answer">Best Answer</button>
+      <form class="best_answer" method="post" action="/questions/<%= @question.id %>/best_answer">
+        <input type="hidden" name="_method" value="put">
+        <input type="hidden" name="toggle_best" value="<%= answer.id %>">
+        <button class="best_answer"><input type="submit" value="Best Answer"></button>
+      </form>
       <p><%= answer.body %></p>
       <br>
       <div class="a_comments">
